--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -44,11 +44,11 @@ First, the spatial resolution achievable with thin sensors was
 investigated. The devices under test (DUTs) were measured in a
 Timepix3-based beam telescope during test-beam campaigns at the CERN
 SPS. All of the assemblies have shown an excellent detection
-efficiency. In general, a more precise reconstruction of the tracks
+efficiency. In general, a more precise reconstruction of the track's
 passing point was possible for multi-pixel clusters by weighting the
-energy deposits in the involved pixels. The $\eta$-algorithm, has
-given better results by taking into account the non-linearities due to
-the charge sharing. The results however have shown that the amount of
+energy deposits in the involved pixels. The $\eta$-algorithm has given
+better results by taking into account the non-linearities due to the
+charge sharing. The results however have shown that the amount of
 charge sharing in such thin sensors is very low, limiting the
 achievable resolution.
 
