[ThinSensors] fixed the extrapolation to smaller pixels

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -59,15 +59,14 @@ which gives the mass to all particles. It was experimentally observed
 in 2012 by ATLAS and CMS.
 
 The weak and the electromagnetic forces are closely related to each
-other and can be unified as the \begin{it}electroweak\end{it} force
-and the equations describing the unification predict the
-force-carrying particles (the photon, the W and Z bosons). All
-force-carrying particles are described as being massless which is true
-for the photon, but the W and Z bosons have a mass about 100 times
-larger than that of the proton. To solve this problem, the
-Brout-Englert-Higgs mechanism was introduced which suggests that the
-Higgs boson gives the mass to the W and Z boson by interaction with a
-Higgs field.
+other and can be unified as the \textit{electroweak} force and the
+equations describing the unification predict the force-carrying
+particles (the photon, the W and Z bosons). All force-carrying
+particles are described as being massless which is true for the
+photon, but the W and Z bosons have a mass about 100 times larger than
+that of the proton. To solve this problem, the Brout-Englert-Higgs
+mechanism was introduced which suggests that the Higgs boson gives the
+mass to the W and Z boson by interaction with a Higgs field.
 
 The Higgs particle can be produced in a particle collider by
 collisions between highly energetic particles. Heavy particles, like
