[CLIC] Implementation of Günther's comments

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -8,8 +8,9 @@ accelerator being able to collide two opposing particle beams of
 protons with a center-of-mass energy up to $13\,\tev$. So far, the
 main result of the LHC is the observation of the Higgs boson and the
 determination of its mass in 2012. However, the experiments at the LHC
-can not fully answer the questions on the nature of this particle. A
-lepton collider can provide complementary precision measurements.
+can not fully answer the questions on the nature of this
+particle. Several options of lepton colliders, providing complementary
+precision measurements, are under study.
 
 The energy loss due to the synchrotron radiation in a circular
 accelerator limits the center-of-mass energy $\sqrt{s}$ reached with
@@ -22,8 +23,14 @@ avoid synchrotron radiation losses and therefore attain higher
 center-of-mass energies than the Large Electron-Positron Collider
 (LEP). In the post-LHC era, CLIC will allow to determine the
 properties of the Higgs boson with a very high precision. CLIC can
-measure collisions with center-of-mass energies from $380\,\gev$ up to
+measure collisions with center-of-mass energies $\sqrt{s}$ from $380\,\gev$ up to
 $3\,\tev$.
+
+The FCC-ee study~\cite{Gomez-Ceballos:2013zzn}, as a part of the
+Future Circular Collider (FCC) project, is another option for a future
+Higgs factory. It considers a high-precision e$^+$e$^-$ circular
+collider with $\sqrt{s}$ from $90\,\gev$ to $350\,\gev$ and is
+foreseen to be built in a new 80-100~km tunnel in the Geneva area.
 
 In this chapter, we will briefly discuss the standard model of
 particle physics and attempt to understand how CLIC can determine more
@@ -34,15 +41,19 @@ performance.
 
 \section{Physics potential of CLIC}
 
-In particle physics, the Standard Model (SM) is a theoretical
-framework that describes how the interaction between elementary
-particles is governed by four fundamental forces. This theory,
-developed in the early 1970s, explains most of the experimental
-results.
+In particle physics, the Standard Model
+(SM)~\cite{Glashow:1961tr,Weinberg:1967tq,salam,tHooft:1972tcz} is a
+theoretical framework that describes how the interaction between
+elementary particles is governed by three out of the four known
+fundamental forces. This theory, developed in the early 1970s,
+explains most of the experimental results.
 
 According to the Standard Model, matter is made of elementary
-particles which can be regrouped into three basic kinds: quarks,
-leptons and gauge bosons as shown in~\cref{fig:standardmodel}.
+particles which can be regrouped into two basic kinds: quarks and
+leptons. The interaction between the particles is done through
+fundamental forces corresponding to the exchange of force-carrying
+particles known as gauge bosons as shown
+in~\cref{fig:standardmodel}~\cite{Thomson:1529540}.
 
 \begin{figure}[htbp]
   \centering
@@ -56,11 +67,11 @@ Today, the Standard Model is the best theory describing the subatomic
 world. However, it does not answer questions like the nature of dark
 matter. This theory also predicts the existence of the Higgs boson
 which gives the mass to all particles. It was experimentally observed
-in 2012 by ATLAS and CMS.
+in 2012 by ATLAS~\cite{Aad20121} and CMS~\cite{Chatrchyan201230}.
 
 The weak and the electromagnetic forces are closely related to each
-other and can be unified as the \textit{electroweak} force and the
-equations describing the unification predict the force-carrying
+other and can be unified as the \textit{electroweak} interaction and
+the equations describing the unification predict the force-carrying
 particles (the photon, the W and Z bosons). All force-carrying
 particles are described as being massless which is true for the
 photon, but the W and Z bosons have a mass about 100 times larger than
@@ -68,21 +79,20 @@ that of the proton. To solve this problem, the Brout-Englert-Higgs
 mechanism was introduced which suggests that the Higgs boson gives the
 mass to the W and Z boson by interaction with a Higgs field.
 
-The Higgs particle can be produced in a particle collider by
-collisions between highly energetic particles. Heavy particles, like
-the Higgs boson, are occasionally produced and then detected by a
-particle detector. The most important parameters of a particle
-collider are its center-of-mass energy, determining the types of
-particles that can be studied or discovered, and its instantaneous
-luminosity, determining the event rates. For a given process, the
-cross section is a measure of quantum mechanical probability for
-interaction and it depends on the fundamental physics. Therefore, the
-observed number of events for a given process depends on the
-integrated luminosity over the operation time of the collider and the
-cross section of the process. The Standard Model predicts different
-mechanisms to produce the Higgs boson and the cross section is very
-small. For example, in LHC only 1 Higgs boson is produced per 10
-billion collisions.
+The Higgs boson can be produced in a particle collider by collisions
+between highly energetic particles. Heavy particles, like the Higgs
+boson, are occasionally produced and then detected by a particle
+detector. The most important parameters of a particle collider are its
+center-of-mass energy, determining the types of particles that can be
+studied or discovered, and its instantaneous luminosity, determining
+the event rates. For a given process, the cross section is a measure
+of quantum mechanical probability for interaction and it depends on
+the fundamental physics. Therefore, the observed number of events for
+a given process depends on the integrated luminosity over the
+operation time of the collider and the cross section of the
+process. The Standard Model predicts different mechanisms to produce
+the Higgs boson and the cross section is very small. For example, in
+LHC only 1 Higgs boson is produced per 10 billion collisions.
 
 An electron-positron collider allows to perform precision measurements
 by colliding beams made of elementary particles. With elementary
@@ -91,12 +101,12 @@ colliding particles can be selected precisely. Unlike proton-proton
 collisions at the LHC experiments, there is no underlying event from
 proton remnants. The complicated environment of a hadron machine makes
 the measurements of the fundamental properties of the Higgs boson very
-hard or almost impossible. The added value of an electron-positron
-collider would be to measure in great details the Higgs mass and its
-total decay width, its spin-parity quantum numbers, its couplings to
-fermions and gauge bosons and also its self couplings that allows for
-the reconstruction of the scalar potential that is responsible of
-electroweak symmetry breaking~\cite{Linssen:1425915}.
+hard. The added value of an electron-positron collider would be to
+measure in great details the Higgs mass and its total decay width, its
+spin-parity quantum numbers, its couplings to fermions and gauge
+bosons and also its self couplings that allows for the reconstruction
+of the scalar potential that is responsible of electroweak symmetry
+breaking~\cite{Linssen:1425915}.
 
 
 CLIC is foreseen to be built and operated in three stages with
@@ -127,8 +137,8 @@ threshold scan. This stage gives the possibility to perform
 model-independent cross-section
 measurements~\cite{Abramowicz:2016zbo}. The second energy stage
 provides direct sensitivity to many physics beyond the SM (BSM)
-models. With higher Higgs statistics, rare decays such as t\={t}H and
-double Higgs productions can be measured. Finally, the third energy
+models. With larger Higgs statistics, rare processes such as t\={t}H
+and double Higgs production can be measured. Finally, the third energy
 stage provides the best sensitivity to new physics, the double-Higgs
 production and allows for improving the measurements of the Higgs
 self-coupling and HHWW quartic
@@ -172,7 +182,7 @@ mechanisms to produce the Higgs boson at CLIC.
 \end{figure}
 
 The cross sections to produce a Higgs with a mass of $M_H = 126\,\gev$
-as a function of the center-of-mass energy $\sqrt{s}$ is given in
+as a function of the center-of-mass energy $\sqrt{s}$ are given in
 \cref{fig:corssSectionH125}. Below $\sqrt{s}$ of $\sim500\,\gev$, the
 HZ mechanism is dominant. For higher energies, the
 H$\nu_{e}\bar{\nu_{e}}$ mechanism dominates.
@@ -238,8 +248,8 @@ beam which has a lower current and higher energy. Power Extraction and
 Transfer Structures (PETS) are special RF devices which extract the
 power of the drive beam by decelerating the beam. The extracted energy
 is then provided to the main beam. CLIC is divided into sectors with
-an average length of 878~m and accelerates the main beam by
-$\approx62\,\gev$.
+an average length of 878~m and each section accelerates the main beam
+by $\approx62\,\gev$.
 
 
 \cref{tab:NominalMachineParams} summarises the nominal beam parameters
@@ -277,11 +287,11 @@ differences in beam parameters.
 
 The small beam sizes at CLIC cause strong electromagnetic radiation
 (Beamstrahlung) from the electron and positron bunches in the field of
-the opposite beam. When Beamstrahlung photons are generated, this
-leads to a reduction of the available centre-of-mass energy $\sqrt{s}$
-of the e\textsuperscript{+}e\textsuperscript{-} collisions. Their
-interactions produce lepton pairs and hadrons at low polar angles
-which are mostly contained in the
+the opposite beam. The generation of Beamstrahlung photons leads to a
+reduction of the available centre-of-mass energy $\sqrt{s}$ of the
+e\textsuperscript{+}e\textsuperscript{-} collisions. The interactions
+of Beamstrahlung photons produce lepton pairs and hadrons at low polar
+angles which are mostly contained in the
 beam-pipe~\cite{Dannheim:1443516}. In the inner detector layers,
 incoherently produced electron-positron pairs ($\sim60$ particles per
 bunch crossing) and $\gamma\gamma\rightarrow$hadrons events ($\sim54$
@@ -290,8 +300,8 @@ particles per bunch crossing) are the dominant backgrounds.
 The electron-positron pairs produced at low polar angles have very
 small transverse momentum. The occupancies in the innermost layers of
 the detector can be reduced to an acceptable level by optimising the
-inner and forward detector regions. The beam-pipe has to be placed
-outside of the high-rate region. The inner detectors have to be
+inner and forward detector regions. The beam-pipe walls have to be
+placed outside of the high-rate region. The inner detectors have to be
 shielded from the backscattered particles which originate from the
 forward region.
 
@@ -326,7 +336,7 @@ implemented in simulations. The overall length and height of the
 detector are 11.4~m and 12.9~m respectively. It is composed of several
 sub detectors. The vertex detector is the closest to the IP and
 consists of pixelated silicon detectors. It is followed by the main
-tracker which is as also a silicon-based detector. After the tracking
+tracker which is also a silicon-based detector. After the tracking
 systems, fine grained calorimeters are used: the silicon-tungsten
 electromagnetic calorimeter (ECAL) and the steel hadronic calorimeter
 (HCAL). The superconducting coil surrounds the calorimeters to provide
@@ -386,7 +396,8 @@ muons.
       
     \end{scope}
   \end{tikzpicture} 
-  \caption{Schematic layout of the CLIC detector concept.}
+  \caption{Schematic layout of the CLIC detector
+    concept~\cite{CLICdetUnpublishedNote}.}
   \label{fig:CLIC_detector_concept}
 \end{figure}
 
@@ -422,8 +433,9 @@ In the innermost layers, an occupancy of $\approx3\%$ due to the
 beam-induced backgrounds is expected~\cite{Dannheim:1443516}. To
 separate these backgrounds from physics events, a time slicing of the
 hits with an accuracy of $\approx10$~ns is required. To achieve this
-precise time stamping, hybrid solutions are preferred since they
-provide more advanced timing measurement technologies.
+precise time stamping, hybrid detectors (where sensors and electronics
+are separately manufactured and later combined) are preferred since
+they provide more advanced timing measurement technologies.
 
 In comparison to the current pixel detectors in the LHC experiments,
 the expected radiation level in the region of the CLIC vertex detector
@@ -455,7 +467,7 @@ in simulations.
 
 A first geometry designed for the CLIC vertex detector is shown in
 \cref{fig:disksGeom}. It contains 5 layers in the barrel and 4 disks
-in the endcap region. Since, forced airflow cooling is foreseen for
+in the endcap region. Since forced airflow cooling is foreseen for
 CLIC as illustrated in Figure~\cref{fig:cooling}, a spiral arrangement
 for the modules in the endcap regions has been implemented instead of
 disks, allowing the air to flow through the vertex detector.
@@ -528,7 +540,8 @@ the air cooling system~\cite{AlipourTehrani:1742993}.
     \emph{double\_spirals(\_v2)}. In the \textsc{GEANT4}
     simulations~\cite{Agostinelli:2002hh}, a double-sided layer is
     implemented as two silicon sensors on top of each other with an
-    overall thickness of \SI{2}{\milli\meter}.}
+    overall thickness of
+    \SI{2}{\milli\meter}. From~\cite{Tehrani:2015tla}.}
   \label{fig:geometries}
 \end{figure}
 
@@ -573,7 +586,7 @@ performance compared to the LHC experiments.
   \end{subfigure} 
   \caption{(a) b-tag and (b) c-tag efficiency for jets in dijet events
     at $\sqrt{s}=200\,\gev$ with different polar angles for the
-    \textit{disks} geometry.}
+    \textit{disks} geometry~\cite{AlipourTehrani:1742993}.}
   \label{fig:DisksPerformance}
 \end{figure}
 
@@ -641,10 +654,10 @@ increased material.
     \emph{double\_spirals} geometries. (c)~Comparison of the
     beauty-tagging performance between the \emph{double\_spirals} and
     \emph{double\_spirals\_v2} geometries. For (a) the
-    misidentification ration for each polar angle is shown
+    misidentification ratio for each polar angle is shown
     separately. For (b) and (c), dijet events with a mixture of polar
     angles between \SI{10}{\degree} and \SI{90}{\degree} are
-    considered.}
+    considered. From~\cite{Tehrani:2015tla}.}
   \label{fig:performance}
 \end{figure}
 
