Finished with all the comments

--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -486,11 +486,19 @@ thicker sensors show a later breakdown.
 % terms of leakage current. 
 
 \begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.6\textwidth]{figures/ActiveEdge/IVCurve_Andreas.pdf}
-  \caption{Measured leakage current for active-edge assemblies listed
-    in \cref{tab:ActiveEdgeAssemblies}. For all assemblies, the
-    measurements were done at the room temperature of $22^{\circ}$~C.}
+  \begin{subfigure}[t]{0.5\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/IVCurve.pdf}
+  \end{subfigure}~
+  \begin{subfigure}[t]{0.5\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/IVCurve_zoom.pdf}
+  \end{subfigure}
+  \caption{(a) Measured leakage current for active-edge assemblies
+    listed in \cref{tab:ActiveEdgeAssemblies}. For all assemblies, the
+    measurements were done at the room temperature of
+    $22^{\circ}$~C. (b) focuses on the breakdown voltage and the
+    leakage current for $50\,\micron$ thick sensors.}
   \label{fig:IVmeasurements_real}
 \end{figure}
 
