--- a/resume.tex
+++ b/resume.tex
@@ -9,18 +9,20 @@ collisions entre des électrons et des positrons à des énergies de
 l'ordre de quelques \tev. Le CLIC, est considéré comme l’une des
 options qui pourrait être complémentaire aux expériences du LHC pour
 la découverte de la physique au-delà du modèle standard et de réaliser
-des mesures plus précises sur le boson de Higgs.
-
-Afin d'atteindre les objectifs de découvertes pour CLIC, un détecteur
-de vertex fait de détecteurs à pixel de haute précision est en cours
-de développement. Une haute résolution spatiale de $3\,\micron$, une
+des mesures plus précises sur le boson de Higgs. Afin d'atteindre les
+objectifs de découvertes pour CLIC, un détecteur de vertex composé de
+détecteurs à pixel de haute précision est en cours de
+développement. Certaines exigences requises par le détecteur de vertex
+pour CLIC sont: une haute résolution spatiale de $3\,\micron$, une
 légère masse de 0.2\%~X\textsubscript{0} par couche de détection, un
 marquage en temps de 10~ns, une basse dissipation de puissance de
-l’ordre de 50 mW/cm\textsuperscript{2} et compatible avec un
-refroidissement à air sont parmi les exigences requises par le
-détecteur de vertex pour CLIC. Dans cette étude, nous nous concentrons
-sur les assemblages de détecteur à pixel hybride en silicium à bords
-minces et actifs. Ces assemblages sont caractérisés à travers la
+l’ordre de 50 mW/cm\textsuperscript{2} et une compatibilité avec un
+refroidissement à air.
+
+Dans cette étude, nous nous concentrons sur les assemblages de
+détecteur à pixel hybride en silicium à bords minces et actifs qui
+vont permettre de satisfaire les exigences requises par le détecteur
+de vertex pour CLIC. Ces assemblages sont caractérisés à travers la
 calibration et des mesures dans un faisceau de particules à haute
 énergie du SPS au CERN. Ces prototypes contiennent une couche de
 détecteur planaire mince avec des épaisseurs qui varient entre
@@ -29,21 +31,21 @@ aux puces de lecture Timepix3 avec des pixels de taille de
 $55\,\micron$. Des simulations basées sur Geant4 (AllPix) ont été
 développées pour une meilleure compréhension du fonctionnement et de
 la résolution spatiale de ces détecteurs. AllPix est aussi employé
-pour la simulation du télescope de faisceau et ainsi extraire ses
-capacités pour la reconstruction des traces. Ces simulations servent
-aussi à prédire la résolution que pourraient atteindre les futurs
-détecteurs minces avec des pixels plus petits. Pour le CLIC, une
-couverture intégrale du détecteur de vertex est essentielle tout en
-minimisant le contenu matériel. Les détecteurs à bords minces
-permettent de couvrir intégralement les surfaces du détecteur à vertex
-en réduisant les zones inactives sans créer des chevauchements entre
-les modules des détecteurs à pixel. Des prototypes, avec des
-configurations différentes aux bords, sont testés en test faisceau de
-haute énergie afin de qualifier l’efficacité du bord actif. Des
-simulations TCAD, basées sur une méthode des éléments finis, sont
-mises en place pour reproduire la fabrication et l’opération de ces
-dispositifs. Les mesures sont comparées avec le résultat des
-simulations.
+pour la simulation du télescope de faisceau et il est ainsi possible
+d'extraire ses capacités pour la reconstruction des traces. Ces
+simulations servent aussi à prédire la résolution que pourraient
+atteindre les futurs détecteurs minces avec des pixels plus
+petits. Pour CLIC, une couverture intégrale du détecteur de vertex est
+essentielle tout en minimisant le contenu matériel. En effet, les
+détecteurs à bords minces permettent de couvrir intégralement les
+surfaces du détecteur à vertex en réduisant les zones inactives sans
+créer des chevauchements entre les modules des détecteurs à pixel. Des
+prototypes, avec des configurations différentes aux bords, sont testés
+en test faisceau de haute énergie afin de qualifier l’efficacité du
+bord actif. Des simulations TCAD, basées sur une méthode des éléments
+finis, sont mises en place pour reproduire la fabrication et
+l’opération de ces dispositifs. Les mesures sont comparées avec le
+résultat des simulations.
 
 
 % Le Collisionneur Linéaire Compact (CLIC), ou le Compact Linear
