--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -734,27 +734,27 @@ sensors. The simulation can be used to predict the performance of thin
 sensors and small pitches in terms of charge sharing.
 
 Figure~\ref{fig:cluSize25Pitch} shows the cluster-size distribution
-and the hit residuals for an extrapolation of the simulation to small
-pixels of size $10\,\micron$ to $25\,\micron$ with $50\,\micron$ thick
-sensors with a Timepix3-type readout ASIC operated at 500 electrons
-threshold with 10-bit TOT measurement and an electronic noise of
-$\sim~80$ electrons. The same digitiser as the one used to validate
-the simulation is used for the extrapolation. Even with a small pitch
-of $25\,\micron$ as foreseen for the CLIC vertex detector, in such
-thin sensors, $\sim~70\%$ of clusters originating from minimum
-ionising particles contain one pixel (the fraction of single-pixel
-clusters with a $55\,\micron$ pitch is $\sim~83\%$). The residual
-distribution is therefore dominated by the broad peak from
-single-pixel clusters and the resulting resolution of
-$\sim~6\,\micron$ (the tracking resolution of $\sim2\,\micron$ is not
-unfolded) is still significantly worse than the required
-$3\,\micron$. Based on simulations, it can be concluded that the
-required resolution can not be achieved with planar sensors of
-$50\,\micron$ thickness and $25\,\micron$ pitch. A pixel pitch of
-$10\,\micron$ allows for achieving a resolution of $\sim~3\,\micron$
-as required by CLIC. New sensor concepts with enhanced charge
-sharing~\cite{Jansen2016242} or integrated technologies with even
-smaller pixel pitch~\cite{Arai:2011ara} are therefore required.
+and the hit residuals (comparing the hit and the MC truth positions)
+for an extrapolation of the simulation to small pixels of size
+$10\,\micron$ to $55\,\micron$ with $50\,\micron$ thick sensors with a
+Timepix3-type readout ASIC operated at 500 electrons threshold with
+10-bit TOT measurement and an electronic noise of $\sim80$
+electrons. The same digitiser as the one used to validate the
+simulation is used for the extrapolation. Even with a small pitch of
+$25\,\micron$ as foreseen for the CLIC vertex detector, in such thin
+sensors, $\sim~70\%$ of clusters originating from minimum ionising
+particles contain one pixel (the fraction of single-pixel clusters
+with a $55\,\micron$ pitch is $\sim~83\%$). The residual distribution
+is therefore dominated by the broad peak from single-pixel clusters
+and the resulting resolution of $\sim~6\,\micron$ is still
+significantly worse than the required $3\,\micron$. Based on
+simulations, it can be concluded that the required resolution can not
+be achieved with planar sensors of $50\,\micron$ thickness and
+$25\,\micron$ pitch. A pixel pitch of $10\,\micron$ allows for
+achieving a resolution of $\sim~3\,\micron$ as required by CLIC. New
+sensor concepts with enhanced charge sharing~\cite{Jansen2016242} or
+integrated technologies with even smaller pixel
+pitch~\cite{Arai:2011ara} are therefore required.
 
 
 % the $25\,\micron$ pitch. Smaller pixels can show
@@ -770,10 +770,11 @@ smaller pixel pitch~\cite{Arai:2011ara} are therefore required.
     \includegraphics[width=\textwidth]{figures/TestBeam/RMS_extrapolationSmallerPixels.pdf}
     \caption{}
   \end{subfigure}
-  \caption{(a) Cluster-size distribution and (b) hit residuals in
-    x-direction for the extrapolation of the simulation to small pixel
-    sizes with a $50\,\micron$ thick sensor and a threshold of
-    $\sim~500$ electrons.}
+  \caption{(a) Cluster-size distribution and (b) hit residuals,
+    comparing the hit and the MC truth position, in x-direction for
+    the extrapolation of the simulation to small pixel sizes with a
+    $50\,\micron$ thick sensor and a threshold of $\sim~500$
+    electrons.}
   \label{fig:cluSize25Pitch}
 \end{figure}
 
