--- a/thesis_acknowledge.tex
+++ b/thesis_acknowledge.tex
@@ -8,10 +8,10 @@ valuable assistance, counsels and contributions of experts and
 collaborators to whom I feel myself obliged to pay my sincere
 gratitudes.
 
-First of all, I would like to pay my most heartfelt tributes to my ,
-Günther Dissertori, for providing me with the opportunity to pursue my
-PhD studies in physics at the ETH Zürich. I will never forget the
-unrelenting and precious support, guidance and comments.
+First of all, I would like to pay my most heartfelt tributes to my
+professor, Günther Dissertori, for providing me with the opportunity
+to pursue my PhD studies in physics at the ETH Zürich. I will never
+forget the unrelenting and precious support, guidance and comments.
 
 
 My acknowledgement and appreciations go to Dominik Dannheim, as well,
@@ -36,9 +36,9 @@ particularly, I express my gratitude to:
   meticulously my thesis and giving me instructive comments and
   drawing conclusions.
 
-\item The Medipix collaboration, especially Messrs. Michael Campbell,
-  Xavi Llopart Cudie and Jérôme Alozy for guidance and advice about
-  the Timepix chips.
+\item The Medipix collaboration, especially to Michael Campbell, Xavi
+  Llopart Cudie and Jérôme Alozy for guidance and advice about the
+  Timepix chips.
 
 \item Daniel Hynds and Adrian Fiergolski for the various discussions
   and test-beams we have shared.
@@ -61,13 +61,9 @@ Enrico, Luca, Milena and Myriam.
 Finally, I would like to thank my amazing family: my parents,
 Mahmanzar and Behzad, for their unconditional love and support
 throughout all my life, for all their sacrifices without which I could
-not imagine where I would be now. My beloved sister and housemate,
-Yassaman, for always being present, encouraging me and tolerating me
-during the times I was low (basically the whole year of 2016). My
-beloved sister and brother, Yassaman and Alireza, for always being
-present by my side and encouraging me.
-
-% I would like to thank ...
+not imagine where I would be now. My beloved sister and brother,
+Yassaman and Alireza, for always being present by my side and
+encouraging me.
 
 % You should probably use \texttt{\textbackslash chapter*} for
 % acknowledgements at the beginning of a thesis and
